--- a/ThueXeMay/Areas/Admin/Views/Auth/Login.cshtml
+++ b/ThueXeMay/Areas/Admin/Views/Auth/Login.cshtml
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Login</title>
+    <title>Admin - Login</title>
 
     <!-- Custom fonts for this template-->
     <link href="~/Content/Admin/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" />
@@ -38,37 +38,21 @@
                             <div class="col-lg-6">
                                 <div class="p-5">
                                     <div class="text-center">
-                                        <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
-                                        @ViewBag.ThongBao
+                                        <h1 class="h4 text-gray-900 mb-4">Quản trị viên !!!</h1>
+                                        <h5 style="color:red">@ViewBag.ThongBao</h5>
                                     </div>
                                     @using (Html.BeginForm())
                                     {       @Html.ValidationSummary(true)
                                             <div class="form-group">
                                                 <input type="text" required name="account" class="form-control form-control-user"
-                                                       placeholder="Enter Email Address...">
+                                                       placeholder="Tên tài khoản">
                                             </div>
                                             <div class="form-group">
                                                 <input type="password" required name="pass" class="form-control form-control-user"
-                                                       id="exampleInputPassword" placeholder="Password">
-                                            </div>
-                                            <div class="form-group">
-                                                <div class="custom-control custom-checkbox small">
-                                                    <input type="checkbox" class="custom-control-input" id="customCheck">
-                                                    <label class="custom-control-label" for="customCheck">
-                                                        Remember
-                                                        Me
-                                                    </label>
-                                                </div>
+                                                       id="exampleInputPassword" placeholder="Mật khẩu">
                                             </div>
                                             <button type="submit" class="btn btn-primary btn-user btn-block" >Login</button>
                                     }
-                                    <hr>
-                                    <div class="text-center">
-                                        <a class="small" href="forgot-password.html">Forgot Password?</a>
-                                    </div>
-                                    <div class="text-center">
-                                        <a class="small" href="register.html">Create an Account!</a>
-                                    </div>
                                 </div>
                             </div>
                         </div>
