--- a/ThueXeMay/Views/Cars/Index.cshtml
+++ b/ThueXeMay/Views/Cars/Index.cshtml
@@ -35,7 +35,7 @@
                         <div class="text">
                             <h2 class="mb-0"><a href="car-single.html">@item.name</a></h2>
                             <div class="d-flex mb-3">
-                                <span class="cat">@item.type</span>
+                                <span class="cat">@item.types.type1</span>
                                 <p class="price ml-auto">@item.price <span>/giờ</span></p>
                             </div>
                             <p class="d-flex mb-0 d-block"><a href="" class="btn btn-primary py-2 mr-1">Thuê ngay</a> @Html.ActionLink("Chi tiết", "Details", new {idx = item.id_bike}, new { @class = "btn btn-secondary py-2 ml-1"})</p>
