--- a/ThueXeMay/Areas/Admin/Views/Shared/Layout_Admin.cshtml
+++ b/ThueXeMay/Areas/Admin/Views/Shared/Layout_Admin.cshtml
@@ -97,7 +97,7 @@
 
             <!-- Heading -->
             <div class="sidebar-heading">
-                Addons
+                Thông tin
             </div>
 
             <!-- Nav Item - Pages Collapse Menu -->
@@ -131,12 +131,18 @@
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="tables.html">
+                <a class="nav-link" href="@Url.Action("ContactAdmin","Home")">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>Tables</span>
+                    <span>Liên lạc</span>
                 </a>
             </li>
 
+            <li class="nav-item">
+                <a class="nav-link" href="@Url.Action("Index","employees")">
+                    <i class="fas fa-users"></i>
+                    <span>Nhân viên</span>
+                </a>
+            </li>
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
 
