--- a/ThueXeMay/Views/Home/Index.cshtml
+++ b/ThueXeMay/Views/Home/Index.cshtml
@@ -2,7 +2,6 @@
     ViewBag.Title = "Home Page";
 }
 
-
 <div class="hero-wrap ftco-degree-bg" style="background-image: url('../../content/images/bg_1.jpg'); " data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
     <div class="container">
@@ -12,7 +11,7 @@
                     <h1 class="mb-4">Nhanh Chóng &amp; Đơn Giản Để Thuê Một Chiếc Xe Máy </h1>
                     <p style="font-size: 18px;">Hãy để chúng tôi đồng hành cùng bạn trên mọi cung đường và ở mọi thắng cảnh của miền đất Nghệ An.</p>
                     <marquee direction="right" scrollamount="5">
-                        <a href="~/Cars" class="icon-wrap popup-vimeo d-flex align-items-center mt-4 justify-content-center">
+                        <a href="" class="icon-wrap d-flex align-items-center mt-4 justify-content-center">
                             <div class="icon d-flex align-items-center justify-content-center">
                                 <i class="fas fa-motorcycle fa-2x"></i>
                             </div>
@@ -27,42 +26,42 @@
 <section class="ftco-section ftco-no-pt bg-light">
     <div class="container">
         <div class="row no-gutters">
-            <div class="col-md-12	featured-top">     
-                    <div class="col-md-8 d-flex align-items-center">
-                        <div class="services-wrap rounded-right w-100">
-                            <h3 class="heading-section mb-4">Hãy để những chuyến đi trở nên dễ dàng hơn</h3>
-                            <div class="row d-flex mb-4">
-                                <div class="col-md-4 d-flex align-self-stretch ftco-animate">
-                                    <div class="services w-100 text-center">
-                                        <div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-route"></span></div>
-                                        <div class="text w-100">
-                                            <h3 class="heading mb-2">Xác định địa điểm đến</h3>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-4 d-flex align-self-stretch ftco-animate">
-                                    <div class="services w-100 text-center">
-                                        <div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-handshake"></span></div>
-                                        <div class="text w-100">
-                                            <h3 class="heading mb-2">Chọn chiếc xe phù hợp</h3>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-4 d-flex align-self-stretch ftco-animate">
-                                    <div class="services w-100 text-center">
-                                        <div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-rent"></span></div>
-                                        <div class="text w-100">
-                                            <h3 class="heading mb-2">Đặt xe với chúng tôi</h3>
-                                        </div>
+            <div class="col-md-12	featured-top">
+                <div class="col-md-8 d-flex align-items-center">
+                    <div class="services-wrap rounded-right w-100">
+                        <h3 class="heading-section mb-4">Hãy để những chuyến đi trở nên dễ dàng hơn</h3>
+                        <div class="row d-flex mb-4">
+                            <div class="col-md-4 d-flex align-self-stretch ftco-animate">
+                                <div class="services w-100 text-center">
+                                    <div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-route"></span></div>
+                                    <div class="text w-100">
+                                        <h3 class="heading mb-2">Xác định địa điểm đến</h3>
                                     </div>
                                 </div>
                             </div>
-                            <p><a href="~/Cars" class="btn btn-primary py-3 px-4">Thuê Xe Ngay</a></p>
+                            <div class="col-md-4 d-flex align-self-stretch ftco-animate">
+                                <div class="services w-100 text-center">
+                                    <div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-handshake"></span></div>
+                                    <div class="text w-100">
+                                        <h3 class="heading mb-2">Chọn chiếc xe phù hợp</h3>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4 d-flex align-self-stretch ftco-animate">
+                                <div class="services w-100 text-center">
+                                    <div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-rent"></span></div>
+                                    <div class="text w-100">
+                                        <h3 class="heading mb-2">Đặt xe với chúng tôi</h3>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
+                        <p><a href="~/Cars" class="btn btn-primary py-3 px-4">Thuê Xe Ngay</a></p>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 </section>
 
 
@@ -103,58 +102,19 @@
     </div>
 </section>
 
+
 <section class="ftco-section testimony-section bg-light">
     <div class="container">
         <div class="row justify-content-center mb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
-                <span class="subheading"><i>Nhà Sáng lập</i></span>
-                <h2 class="mb-2">Thành viên nhóm</h2>
+                <span class="subheading">Cảm nhận khách hàng khi thuê</span>
+                <h2 class="mb-3">Nhận xét tích cực</h2>
             </div>
         </div>
         <div class="row ftco-animate">
             <div class="col-md-12">
                 <div class="carousel-testimony owl-carousel ftco-owl">
-                    <div class="item">
-                        <div class="testimony-wrap rounded text-center py-4 pb-5">
-                            <div class="user-img mb-2" style="background-image: url(../../content/images/member/1.jpg)">
-                            </div>
-                            <div class="text pt-4">
-                                <p class="name">Trần Đức Tài</p>
-                                <span class="position">Nhóm trưởng</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="item">
-                        <div class="testimony-wrap rounded text-center py-4 pb-5">
-                            <div class="user-img mb-2" style="background-image: url(../../content/images/member/2.jpg)">
-                            </div>
-                            <div class="text pt-4">
-                                <p class="name">Nguyễn Tú Thái</p>
-                                <span class="position">Thành viên</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="testimony-wrap rounded text-center py-4 pb-5">
-                            <div class="user-img mb-2" style="background-image: url(../../content/images/member/3.jpg)">
-                            </div>
-                            <div class="text pt-4">
-                                <p class="name">Nguyễn Bá Tài</p>
-                                <span class="position">Thành viên</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="testimony-wrap rounded text-center py-4 pb-5">
-                            <div class="user-img mb-2" style="background-image: url(../../content/images/member/4.jpg)">
-                            </div>
-                            <div class="text pt-4">
-                                <p class="name">Lê Đức Tài</p>
-                                <span class="position">Thành viên</span>
-                            </div>
-                        </div>
-                    </div>
+                    @{ Html.RenderAction("Rate", "About");}
                 </div>
             </div>
         </div>
