--- a/ThueXeMay/Views/Shared/_Layout.cshtml
+++ b/ThueXeMay/Views/Shared/_Layout.cshtml
@@ -53,6 +53,9 @@
     </nav>
     <!-- END nav -->
     @RenderBody();
+    <a href="~/Cart" class="popup-vimeo">
+        <i class="fas fa-cart-arrow-down fa-4x" style="color:orangered;position:fixed;bottom:30px;height: 100px;right: 30px;z-index:9999;"> </i>
+    </a>
     <footer class="ftco-footer ftco-bg-dark ftco-section">
         <div class="container">
             <div class="row mb-5">
@@ -81,7 +84,7 @@
                     <div class="ftco-footer-widget mb-4">
                         <h2 class="ftco-heading-2">Hỗ trợ khách hàng</h2>
                         <ul class="list-unstyled">
-                            <li><a href="#" class="py-2 d-block">FAQ</a></li>
+                            <li><a href="http://ductaii.tk/nhom14" class="py-2 d-block">Thành viên nhóm</a></li>
                             <li><a href="#" class="py-2 d-block">Mẹo thuê xe</a></li>
                             <li><a href="#" class="py-2 d-block">Cách thức hoạt động</a></li>
                             <li><a href="~/Contact" class="py-2 d-block">Liên hệ với chúng tôi</a></li>
