--- a/ThueXeMay/Areas/Admin/Views/Home/_Mail.cshtml
+++ b/ThueXeMay/Areas/Admin/Views/Home/_Mail.cshtml
@@ -8,14 +8,14 @@
 <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
      aria-labelledby="messagesDropdown">
     <h6 class="dropdown-header">
-        Message Center
+        Thư vừa đến
     </h6>
     @{ var i = 0;}
     @foreach (var item in Model)
     {
         if (i != 5)
         {
-            <a class="dropdown-item d-flex align-items-center" href="#">
+            <a class="dropdown-item d-flex align-items-center" href="@Url.Action("MailDetail", new {id = item.ContactId})">
                 <div class="dropdown-list-image mr-3">
                     <img class="rounded-circle" src="~/Content/images/user.png"
                          alt="...">
