--- a/ThueXeMay/Views/About/Index.cshtml
+++ b/ThueXeMay/Views/About/Index.cshtml
@@ -83,19 +83,58 @@
     </div>
 </section>
 
-
 <section class="ftco-section testimony-section bg-light">
     <div class="container">
         <div class="row justify-content-center mb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
-                <span class="subheading">Cảm nhận khách hàng khi thuê</span>
-                <h2 class="mb-3">Nhận xét tích cực</h2>
+                <span class="subheading"><i>Nhà Sáng lập</i></span>
+                <h2 class="mb-2">Thành viên nhóm</h2>
             </div>
         </div>
         <div class="row ftco-animate">
             <div class="col-md-12">
                 <div class="carousel-testimony owl-carousel ftco-owl">
-                    @{ Html.RenderAction("Rate", "About");}
+                    <div class="item">
+                        <div class="testimony-wrap rounded text-center py-4 pb-5">
+                            <div class="user-img mb-2" style="background-image: url(../../content/images/member/1.jpg)">
+                            </div>
+                            <div class="text pt-4">
+                                <p class="name">Trần Đức Tài</p>
+                                <span class="position">Nhóm trưởng</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <div class="testimony-wrap rounded text-center py-4 pb-5">
+                            <div class="user-img mb-2" style="background-image: url(../../content/images/member/2.jpg)">
+                            </div>
+                            <div class="text pt-4">
+                                <p class="name">Nguyễn Tú Thái</p>
+                                <span class="position">Thành viên</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="testimony-wrap rounded text-center py-4 pb-5">
+                            <div class="user-img mb-2" style="background-image: url(../../content/images/member/3.jpg)">
+                            </div>
+                            <div class="text pt-4">
+                                <p class="name">Nguyễn Bá Tài</p>
+                                <span class="position">Thành viên</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="testimony-wrap rounded text-center py-4 pb-5">
+                            <div class="user-img mb-2" style="background-image: url(../../content/images/member/4.jpg)">
+                            </div>
+                            <div class="text pt-4">
+                                <p class="name">Lê Đức Tài</p>
+                                <span class="position">Thành viên</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
